--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Starbucks Coffee</title>
-    <link rel="stylesheet" href="../dist/output.css" />
+    <script src="https://kit.fontawesome.com/3fd6f2f40d.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <div id="root"></div>
